syntax = "proto3";

enum PressureControlAlgorithm {
  PressureControlAlgorithm_UNSPECIFIED = 0;
  PressureControlAlgorithm_TARGET_PRESSURE = 1;
  PressureControlAlgorithm_FEED_WITH_LIMIT = 2;
  PressureControlAlgorithm_NONE = 3;
}

enum PressureControlDirection {
  PressureControlDirection_UNSPECIFIED = 0;
  PressureControlDirection_VACUUM = 1;
  PressureControlDirection_PRESSURE = 2;
}

message PressureControlPumpParameters {
  PressureControlAlgorithm algorithm = 2;
  float target_pressure = 3;
  PressureControlDirection direction = 4;
  float max_pressure_limit = 5;
  float min_pressure_limit = 6;
  float feed_pwm = 7;
  float feed_time = 8;
}

message PressureControlParameters {
  bool enable = 1;
  optional PressureControlPumpParameters ink_pump = 2;
  optional PressureControlPumpParameters capping_pump = 3;
}

message PressureControlSystemState {
  float pressure = 1;
  bool enabled = 2;
  PressureControlParameters parameters = 3;
  bool done = 4;
}
