syntax = "proto3";
enum PrinterSystemState {
  PrinterSystemState_UNSPECIFIED = 0;
  PrinterSystemState_STARTUP = 1;
  PrinterSystemState_IDLE = 2;
  PrinterSystemState_ERROR = 3;
  PrinterSystemState_DROPWATCHER = 4;
  PrinterSystemState_PRINT = 5;
  PrinterSystemState_KEEP_ALIVE = 6;
}